@@ -1,3 +1,7 @@
+2005-10-18  Diego Novillo  <dnovillo@redhat.com>
+
+	* testsuite/libgomp.dg/shared-3.c: New test.
+
 2005-10-18  Jakub Jelinek  <jakub@redhat.com>
 
 	* testsuite/libgomp.fortran/appendix-a/a.31.3.f90: Removed.
